Fixed Chapter 9 MAD equation

--- a/WebBook3.html
+++ b/WebBook3.html
@@ -10,7 +10,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)" /> 
 <!-- xhtml,1,sections+,charset=utf-8,html --> 
 <meta name="src" content="WebBook3.tex" /> 
-<meta name="date" content="2021-12-28 09:11:00" /> 
+<meta name="date" content="2021-12-28 09:35:00" /> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css" /> 
 </head><body 
 >
@@ -27347,13 +27347,13 @@ id="TBL-13-14" /><col
 id="TBL-13-15" /><col 
 id="TBL-13-16" /></colgroup><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-1-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-1-1"  
-class="td11">                            <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Gondwana Continents:</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-1-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-1-1"  
+class="td11"></td>                            <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Gondwana Continents:</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-2-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-2-1"  
-class="td11">              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-2-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-2-1"  
+class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-13-3-"><td  style="white-space:nowrap; text-align:right;" id="TBL-13-3-1"  
 class="td11">  </td><td  style="white-space:nowrap; text-align:right;" id="TBL-13-3-2"  
@@ -27438,9 +27438,9 @@ class="td11"> </td><td  style="white-space:nowrap; text-align:right;" id="TBL-13
 class="td11"></td>
 </tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-7-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-7-1"  
-class="td11">                    <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A-2: van der Voo and French (1974)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-7-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-7-1"  
+class="td11"></td>                    <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A-2: van der Voo and French (1974)</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-13-8-"><td  style="white-space:nowrap; text-align:right;" id="TBL-13-8-1"  
 class="td11"> 1</td><td  style="white-space:nowrap; text-align:right;" id="TBL-13-8-2"  
@@ -27496,9 +27496,9 @@ class="td11">   -1</td><td  style="white-space:nowrap; text-align:right;" id="TB
 class="td11">-20</td>
 </tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-11-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-11-1"  
-class="td11">                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-11-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-11-1"  
+class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-13-12-"><td  style="white-space:nowrap; text-align:right;" id="TBL-13-12-1"  
 class="td11"> 1</td><td  style="white-space:nowrap; text-align:right;" id="TBL-13-12-2"  
@@ -27554,13 +27554,13 @@ class="td11"> 147</td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11"> 50</td>
 </tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-15-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-15-1"  
-class="td11">                             <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Laurasian Continents:</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-15-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-15-1"  
+class="td11"></td>                             <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Laurasian Continents:</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-16-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-16-1"  
-class="td11">              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-16-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-16-1"  
+class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-13-17-"><td  style="white-space:nowrap; text-align:right;" id="TBL-13-17-1"  
 class="td11">  </td><td  style="white-space:nowrap; text-align:right;" id="TBL-13-17-2"  
@@ -27661,9 +27661,9 @@ class="td11">    </td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11">   </td>
 </tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-22-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-13-22-1"  
-class="td11">                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-13-22-"><td colspan="5" style="white-space:nowrap; text-align:right;" id="TBL-13-22-1"  
+class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-13-23-"><td  style="white-space:nowrap; text-align:right;" id="TBL-13-23-1"  
@@ -32217,8 +32217,8 @@ id="TBL-18-13" /></colgroup>
 
                                                                      
 <tr  
- style="vertical-align:baseline;" id="TBL-18-1-"><td colspan="13" style="white-space:nowrap; text-align:center;" id="TBL-18-1-1"  
-class="td11"> <div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
+ style="vertical-align:baseline;" id="TBL-18-1-"><td colspan="5" style="white-space:nowrap; text-align:left;" id="TBL-18-1-1"  
+class="td11"></td> <div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
 ><span class="id">Table A.4:   </span><span  
 class="content">Finite   rotations   for   selected   Gondwana
 continents.   Rotates   continent   to   South   African   fixed
@@ -32226,7 +32226,7 @@ coordinates.  AUS:  Australia,  ANT:  East  Antarctica;  IND:
 India; SAM: South American Craton. [Rotations of Torsvik
 et al. (2008) - see for additional data.] </span></div><!--tex4ht:label?: x1-219007r4 -->                            </div>  <a 
  id="x1-219008"></a>
-</td></tr><tr 
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-18-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-18-2-1"  
 class="td11">Age</td><td  style="white-space:nowrap; text-align:left;" id="TBL-18-2-2"  
@@ -33310,8 +33310,8 @@ id="TBL-19-10" /></colgroup>
 
                                                                      
 <tr  
- style="vertical-align:baseline;" id="TBL-19-1-"><td colspan="10" style="white-space:nowrap; text-align:center;" id="TBL-19-1-1"  
-class="td11"><div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
+ style="vertical-align:baseline;" id="TBL-19-1-"><td colspan="5" style="white-space:nowrap; text-align:left;" id="TBL-19-1-1"  
+class="td11"></td><div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
 ><span class="id">Table A.5:   </span><span  
 class="content">Finite   rotations   for   selected   Laurentian
 continents.   Rotates   continent   to   South   African   fixed
@@ -33319,7 +33319,7 @@ coordinates.  EUR:  Europe;  NAM:  North  America;  GRN:
 Greenland.  [Rotations  of  Torsvik  et  al.  (2008)  -  see  for
 additional data.] </span></div><!--tex4ht:label?: x1-219009r5 -->                                                         </div><a 
  id="x1-219010"></a>
-</td></tr><tr 
+</tr><tr 
 class="hline"><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td><td><hr /></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-19-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-19-2-1"  
 class="td11">Age</td><td  style="white-space:nowrap; text-align:left;" id="TBL-19-2-2"  
